# fractal-task-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  data.json  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  documentation.yaml  example-manifest.yml  external-packages.yml  publish_to_pypi.yml  uv_audit.yaml  zizmor.yaml
changelog/: index.html
development/: index.html
docs/: .gitignore  development.md  doc-requirements.txt  gen_ref_pages.py  index.md  parser.py  schema_specs.md  usage.md
docs/scripts/: generate_cli_ref.py  generate_code_ref.py
docs/usage/: index.md  install.md  legacy.md  manifest.md  run_task.md  task_types.md
example/: README.md  create_manifest.sh  pyproject.toml
example/my_tasks/: README.md  create_manifest.sh  pyproject.toml  update_package_manifest_and_wheel.sh
example/my_tasks/src/my_tasks/: __FRACTAL_MANIFEST__.json  task1.py  task2.py  task3.py  task4.py
example/my_tasks/src/my_tasks/dev/: task_list.py
example/src/example_tasks/: task1.py  task2.py
example/src/example_tasks/dev/: task_list.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_9acefc9c85667762___init___py.html  z_9acefc9c85667762__args_schemas_py.html  z_9acefc9c85667762__cli_py.html  z_9acefc9c85667762__cli_tools_py.html  z_9acefc9c85667762__create_manifest_py.html  z_9acefc9c85667762__deepdiff_py.html  z_9acefc9c85667762__descriptions_py.html  z_9acefc9c85667762__extract_function_py.html  z_9acefc9c85667762__generatejsonschema_py.html  z_9acefc9c85667762__json_types_py.html  z_9acefc9c85667762__package_name_tools_py.html  z_9acefc9c85667762__parse_pyproject_py.html  z_9acefc9c85667762__pydantic_generatejsonschema_py.html  z_9acefc9c85667762__signature_constraints_py.html  z_9acefc9c85667762__specs_py.html  z_9acefc9c85667762__task_arguments_py.html  z_9acefc9c85667762__task_docs_py.html  z_9acefc9c85667762__titles_py.html  z_9acefc9c85667762__union_types_py.html  z_9acefc9c85667762_logging_config_py.html  z_9acefc9c85667762_task_models_py.html  z_9acefc9c85667762_task_wrapper_py.html
reference/SUMMARY/: index.html
reference/fractal-manifest/: index.html
reference/fractal_task_tools/: index.html
search/: search_index.json
src/fractal_task_tools/: __init__.py  _args_schemas.py  _cli.py  _cli_tools.py  _create_manifest.py  _deepdiff.py  _descriptions.py  _extract_function.py  _json_types.py  (+13 more)
tests/: conftest.py  test_allof_due_to_field.py  test_cli.py  test_create_manifest.py  test_create_schema_for_single_task.py  test_deepdiff.py  test_descriptions.py  test_extract_function.py  test_fractal_schema_specs.py  test_get_package_name_from_pyproject.py  test_logging_config.py  test_parse_pyproject.py  test_specs.py  test_task_models.py  test_task_wrapper.py  test_unions.py  test_unit_lib_descriptions.py  test_validate_arguments.py  test_validate_function_signature.py
tests/fake-tasks/: pyproject.toml
tests/fake-tasks/src/fake_tasks/: models.py  task1.py  task2_with_inheritance.py  task3_for_descriptions.py  task_list.py  task_list_no_authors.py  task_list_with_converter.py  task_list_with_empty_docs_link.py
usage/: index.html
(+47 files in other folders)
