[project]
name = "fractal-task-tools"
version = "0.4.0a3"
description = "Shared tools for Fractal tasks"
authors = [
    {name="Tommaso Comparin", email="tommaso.comparin@exact-lab.it"},
]
readme = "README.md"
license = {text ="BSD-3-Clause"}
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic >=2.11.0,<2.13.0",
    "docstring-parser >=0.15,<=0.17",
]
[project.optional-dependencies]
dev = [
    "bumpver ==2024.1130",
    "devtools ==0.12.2",
    "pytest >=8.3.0, <9.0.0",
    "coverage >=7.6.0,<7.7.0",
    "jsonschema >=4",
    "requests >2.32.0,<2.33.0",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]>=1.0.2,<1.1.0",
    "mkdocs-material==9.7.1",
    "mkdocs-gen-files==0.6.0",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-section-index==0.3.10",
    "mkdocs-include-markdown-plugin==7.2.1",
]

[project.urls]
homepage = "https://github.com/fractal-analytics-platform/fractal-task-tools"
repository = "https://github.com/fractal-analytics-platform/fractal-task-tools"
changelog = "https://github.com/fractal-analytics-platform/fractal-task-tools/blob/main/CHANGELOG.md"


[build-system]
requires = ["setuptools >= 80.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
fractal-manifest = "fractal_task_tools._cli:main"

[tool.bumpver]
current_version = "0.4.0a3"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"$']
"src/fractal_task_tools/__init__.py" = ['__VERSION__ = "{version}"$']


[tool.coverage.run]
branch = true
parallel = true
relative_files = true
source = ["src"]
omit = ["tests/*", "*/.venv/*"]

[tool.coverage.report]
omit = ["tests/*", "*/.venv/*"]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
