[project]
name = "fake-tasks"
version = "0.0.1"
description = "Fake"
authors = [
    {name="Fake Fake", email="fake@example.org"},
]
readme = "README.md"
license = {text ="BSD-3-Clause"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic >=2.0.0,<=2.8.2",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
