[project]
name = "fake-tasks"
version = "0.0.1"
description = "Fake"
authors = [
    {name="Fake Fake", email="fake@example.org"},
]
readme = "README.md"
license = {text ="BSD-3-Clause"}
requires-python = ">=3.11,<3.15"
dependencies = ["pydantic >=2.11.0"]

[build-system]
requires = ["setuptools >= 80.0"]
build-backend = "setuptools.build_meta"
